# mantid-sphinx-theme

./: .pre-commit-config.yaml  MANIFEST.in  README.md  dev-requirements.txt  preview.py  setup.cfg  setup.py
.github/workflows/: ci-checks.yml
mantid_sphinx_theme/: __init__.py  mantid_nav_bar.html  mantid_navbar_logo.html  theme.conf
mantid_sphinx_theme/static/css/: style.css
src/mantid_sphinx_theme/: __init__.py  _version.py  layout.html  mantid_icon_links.html  mantid_nav_bar.html  mantid_navbar_logo.html  theme.conf
src/mantid_sphinx_theme/static/css/: style.css
tests/: conftest.py  test_build.py
tests/sites/base/: conf.py
tests/test_build/: navbar_ix.html  sidebar_subpage.html
