[metadata]
name = mantid-sphinx-theme
version = 0.1.0
description = Mantid Project theme for Sphinx
long_description = file: README.md

[options]
packages = find:
package_dir =
    =src
zip_safe = False
include_package_data = True
requires-python = >=3.7
install_requires =
    pydata_sphinx_theme

[options.packages.find]
where = src

[options.package_data]
mantid_sphinx_theme =
    theme.conf
    *.html
    static/css/*.css
    static/images/*.png

[options.entry_points]
sphinx.html_themes =
    mantid_sphinx_theme = mantid_sphinx_theme


[options.extras_require]
test =
  beautifulsoup4
  pytest
  pytest-regressions
devel =
  pre-commit
